# chord-composer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example_composition.yaml  example_generative_composition.yaml  export_composition.sh  export_composition_zhn.sh  export_generative_composition.sh  play_composition.sh  play_composition_zhn.sh  print_chords.sh
src/: language.rs  lib.rs  main.rs
src/audio/: basic_sampler.rs  mod.rs
src/io/: deseralizer.rs  exporter.rs  mod.rs
src/performance/: mod.rs  performance_engine.rs
src/theory/: chords.rs  composition.rs  mod.rs  notes.rs
tests/: export_test.yaml  export_test_missing_patterns.yaml  export_test_new.yaml  export_test_no_patterns.yaml  middle_c.yaml  test_interface.rs  test_template_export.yaml
