[package]
name = "chord-composer"
version = "0.2.6"
authors = ["cj <unsignedbytebite@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
documentation = ""
repository = "https://github.com/unsignedbytebite/chord-composer"
description = """
A music composition tool for structuring chord progressions and patterns.
"""
keywords = ["music", "composing", "chords"]
categories = ["multimedia::audio"]
autobenches = true

[features]
default=["with-sound"]
with-sound = ["rodio"]

[dependencies]
rodio = {version ="*", optional = true} 
stopwatch = "*"
serde = "*"
serde_yaml = "*"
serde_derive = "*"
ghakuf = "*"
rand = "*"
music-timer = "*"
